--- a/style/mediaquerys.css
+++ b/style/mediaquerys.css
@@ -331,6 +331,8 @@
 
     .texto-apresentacao p{
         font-size: 14px;
+        text-align: start;
+        letter-spacing: 0px;
     }
 
     .card{
