--- a/style/mediaquerys.css
+++ b/style/mediaquerys.css
@@ -256,6 +256,11 @@
         letter-spacing: 2px;
     }
 
+    .texto-apresentacao p{
+        font-size: 16px;
+        text-align: start;
+    }
+
     .apresentacao-skill{
         width: 100%;
     }
@@ -331,8 +336,6 @@
 
     .texto-apresentacao p{
         font-size: 14px;
-        text-align: start;
-        letter-spacing: 0px;
     }
 
     .card{
