--- a/style/style.css
+++ b/style/style.css
@@ -292,7 +292,7 @@ body{
 
 .container-about .about h2{
 
-    width: 110px;
+    width: 180px;
     font-size: 30px;
     border-bottom: solid 5px var(--secondary_bg);
 }
@@ -333,91 +333,56 @@ body{
     
 }
 
-.apresentacao-skill{
+.container_skill{
     
-    width: 40%;
+    width: 30%;
     background: var(--bk-skill);
-    padding: 50px 0;
-    border-radius: 10px;
+    padding: 30px;
+    border-radius: 10px; 
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+  
 }
 
-.apresentacao-skill .text-skill{
+.text-skill{
     display: flex;
-    justify-content: end;
+    justify-content: center;
     font-size: 24px;
     color:var(--secondary_text);;
     font-weight: 600;
     padding: 5px;
 }
-
-.apresentacao-skill .skills{
-    
-    margin-top: 50px;
-}
-
-.box-skill{
-    padding: 0 10px;
-
-}
-
-.nome-percentual{
-    display: flex;
+.skills{
+    display:flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 5px 8px;
-    font-size: 18px;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
-.bar-skill{
-    
-    width: 100%;
-    height: 12px;
-    border-radius: 10px;
-    background: var(--bg-skill-bar);
-    position: relative;
+.skill{
+    /* border: solid red; */
+    width: 100px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
 }
-/* ====== Inicio das skills bar ======*/
-.bar-skill .skill-color-html{
-    
-    width: 100%;
-    height: 12px;
-    border-radius: 10px;
-    background: var(--secondary_bg);
-    position: absolute;
+
+.skill .icon_skill{
+    transform: scale(3.5);
 }
-.bar-skill .skill-color-css{
-    
-    width: 90%;
-    height: 12px;
-    border-radius: 10px;
-    background: var(--secondary_bg);
-    position: absolute;
+
+.skill .icon_skill:hover{
+    color: var(--secondary_text);
 }
-.bar-skill .skill-color-js{
-    
-    width: 50%;
-    height: 12px;
-    border-radius: 10px;
-    background: var(--secondary_bg);
-    position: absolute;
+
+.skill p{
+    font-size: 16px;
 }
-.bar-skill .skill-color-react{
-    
-    width: 5%;
-    height: 12px;
-    border-radius: 10px;
-    background: var(--secondary_bg);
-    position: absolute;
-}
-.bar-skill .skill-color-angular{
-    
-    width: 1%;
-    height: 12px;
-    border-radius: 10px;
-    background: var(--secondary_bg);
-    position: absolute;
-}
-/* ====== Fim das skills bar ======*/
 
 /* ===== Fim About ====== */
 
