--- a/style/style.css
+++ b/style/style.css
@@ -107,7 +107,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 10px;
 }
 
