--- a/styles/projects.css
+++ b/styles/projects.css
@@ -20,10 +20,9 @@
     justify-content: center;  
 }
 .card{
-    height: 25rem;
+    height: 30rem;
     border-radius: 10px;
     overflow: hidden;
-    /* border: solid 0.5px var(--secondary_bg); */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
     display: flex;
     flex-direction: column;
@@ -37,7 +36,7 @@
 }
 
 .img{
-    height: 200px;
+    height: 40%;
 }
 
 .img img{
@@ -46,11 +45,12 @@
 }
 
 .container-text-card{
+    height: 60%;
     display: flex;
     gap: 5px;
     padding: 0.5rem 0.3rem;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 
