alteração btn css

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
     --bk-skill:#0c0c16eb;
     --bg-skill-bar:  #4d4d4d73;
     --primary_text: #ddd9ce;
+    --cor-font-btn: #ddd9ce;
     --secondary_text: #E80F88;
     --box_shadow_hover: #e80f8833 -10px 10px;
     --box_shadow_theme: #e82cc333;
