--- a/styles/projects.css
+++ b/styles/projects.css
@@ -87,7 +87,8 @@
     width: 5.6rem;
     background: var(--secondary_bg);
     border-radius: 15px;
-    color: var(--primary_text);
+    color: var(--cor-font-btn);
+    text-shadow: 1px 1px 2px #01010f;
     font-size: 1.2rem;
     transition: font-weight 3ms ease-in-out;
 }
@@ -155,7 +156,8 @@
 
     .container-text-card{
         width: 50%;
-        padding: 1rem 0.3rem;
+        height: 100%;
+        padding: 1rem;
         justify-content: space-around;
     }
 
