Atualizar o projects.css
Adicionando padding-bottom no container

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -127,6 +127,7 @@
     .container-projects{
         width: 90%;
         margin: auto;
+        padding-bottom: 1rem;
     }
 
     .box-projects{
