--- a/styles/menu.css
+++ b/styles/menu.css
@@ -124,6 +124,7 @@
 @media (min-width: 768px) and (max-width:991px){
     .menu{
         width: 90vw;
+        heigth: 10%;
     }
 }
 @media (min-width: 992px) and (max-width:1199px){
