--- a/styles/mode_alternate.css
+++ b/styles/mode_alternate.css
@@ -1,7 +1,6 @@
 
 .modos{
     display: flex;
-    width: 3.125rem;
     align-items: center;
     justify-content: space-between;
     padding: 0.625rem;
@@ -12,7 +11,7 @@
 
 
 .icon-modo{
-    transform: scale(1.8);
+    transform: scale(2);
     cursor: pointer;
     color: var(--secondary_text);
 }
@@ -37,7 +36,7 @@
     pointer-events: none;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
     align-items: center;
     transition:all 0.7ms ease-in;
 }
@@ -57,12 +56,12 @@
 .color-box .colors-switchers {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
 }
 
 .color-box .colors-switchers .btn {
-    width: 25px;
-    height: 25px;
+    width: 1.875rem;
+    height: 1.875rem;
     outline: none;
     border: none;
     border-radius: 50%;
@@ -113,8 +112,32 @@
     background: var(--purple);
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1200px) and (max-width: 1559px){
+    .modos{
+        flex-direction: column-reverse;
+    }
+    
+    .icon-modo{
+        transform: scale(1.8);
+    }
     .container-icon .color-box{
-        top: -11.875rem;
+        top: -13rem;
+        gap: 0.625rem;
+    }
+    .color-box .colors-switchers .btn {
+        width: 1.5625rem;
+        height: 1.5625rem;
+    }
+}
+
+@media (min-width: 1560px){
+   
+    .container-icon .color-box{
+        top: -13rem;
+        gap: 0.625rem;
+    }
+    .color-box .colors-switchers .btn {
+        width: 1.5625rem;
+        height: 1.5625rem;
     }
 }
